# Gender-Codes

./: .gitignore  CITATION.cff  LICENSE  README.md  figure2.2.py  pyproject.toml
data/fig13.2/processed/: Proportion of Undergraduates earning Computer Science Degrees by Gender, 1966-2023.csv
data/fig13.2/raw/: AwardLevelandSex1966-2012.xlsx  BachelorsCompletions2012-23.xlsx  DoctorsCompletionsOth2012-23.xlsx  DoctorsCompletionsPro2012-23.xlsx  DoctorsCompletionsRes2012-23.xlsx  MastersCompletions2012-23.xlsx
data/fig2.2/processed/: Bachelors2000-23.csv
data/fig2.2/raw/: Bachelors2001-02.xlsx  Bachelors2002-03.xlsx  Bachelors2003-04.xlsx  Bachelors2004-05.xlsx  Bachelors2007-08.xlsx  Bachelors2008-09.xlsx  Bachelors2010-11.xlsx  Bachelors2012-13.xlsx  Bachelors2015-16.xlsx  Bachelors2018-19.xlsx  Bachelors2019-20.xlsx  Bachelors2020-21.xlsx  Mathematics1966-2012.xlsx
data/fig2.5/processed/: Computer Science Degrees Award Level, and Gender Conferred by Year (1966-2023).csv  Computer Science Degrees Conferred by Year, Award Level, and Gender (1966-2023).csv
data/fig2.5/raw/: CompSciGrad2012-13.xlsx  CompSciGrad2013-14.xlsx  CompSciGrad2014-15.xlsx  CompSciGrad2015-16.xlsx  CompSciGrad2016-17.xlsx  CompSciGrad2017-18.xlsx  CompSciGrad2018-19.xlsx  CompSciGrad2019-20.xlsx  CompSciGrad2020-21.xlsx  CompSciGrad2021-22.xlsx  CompSciGrad2022-23.xlsx  ComputerSci1966-2012.xlsx
data/raw/fig2.2/: Bachelors1966-2012.xlsx  Bachelors1999-00.xlsx  Bachelors2000-01.xlsx  Bachelors2005-06.xlsx  Bachelors2006-07.xlsx  (+8 more)
src/: figure13_2.py  figure2.2.py  figure2.5.py
