[project]
name = "gender-codes-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "python-calamine>=0.3.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = []
